Working on the ui
adding some hover effect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://play-lh.googleusercontent.com/vhqNEcEsf5n2MkYiNtU-LHOzdQVn30A2yLaLZ4OBk0cIQ3YQv8MOrzIsNZcUAAYh3Q=w240-h480-rw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>X O</title>
   </head>
   <body>
     <div id="root"></div>
